@@ -101,9 +101,9 @@ class TestWindows_10_X86_64(unittest.TestCase):
 		self.assertEqual(0, len(cpuinfo._get_cpu_info_from_cat_var_run_dmesg_boot()))
 		self.assertEqual(0, len(cpuinfo._get_cpu_info_from_ibm_pa_features()))
 		self.assertEqual(0, len(cpuinfo._get_cpu_info_from_sysinfo()))
-		self.assertEqual(14, len(cpuinfo._get_cpu_info_from_cpuid()))
+		self.assertEqual(13, len(cpuinfo._get_cpu_info_from_cpuid()))
 		self.assertEqual(3, len(cpuinfo._get_cpu_info_from_platform_uname()))
-		self.assertEqual(22, len(cpuinfo._get_cpu_info_internal()))
+		self.assertEqual(21, len(cpuinfo._get_cpu_info_internal()))
 
 	def test_get_cpu_info_from_cpuid(self):
 		info = cpuinfo._get_cpu_info_from_cpuid()
@@ -118,7 +118,6 @@ class TestWindows_10_X86_64(unittest.TestCase):
 		self.assertEqual(1, info['stepping'])
 		self.assertEqual(69, info['model'])
 		self.assertEqual(6, info['family'])
-		#self.assertEqual(8, info['extended_family'])
 
 		self.assertEqual(64 * 1024, info['l2_cache_size'])
 		self.assertEqual(256, info['l2_cache_line_size'])
